--- a/Android/ChemApp/src/main/res/values/strings.xml
+++ b/Android/ChemApp/src/main/res/values/strings.xml
@@ -2,8 +2,13 @@
 <resources>
     <string name="app_name">ChemApp</string>
 
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="navigation_drawer_open">Open predal</string>
+    <string name="navigation_drawer_close">Zapri predal</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Nastavitve</string>
+    
+    <string name="no_network">Internetna povezava ni na voljo</string>
+    <string name="dialog_retry">Poskusi znova</string>
+    
+    <string name="rest_base">https://amaranth.hitko.si/rest/</string>
 </resources>
